--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script defer src="/__/firebase/7.20.0/firebase-database.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-storage.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-analytics.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
