Add github fork ribbon

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,22 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <h1>New Year Eve</h1>
+      <a
+        class="github-fork-ribbon"
+        href="https://github.com/damianb53/countdown"
+        data-ribbon="Fork me on GitHub"
+        title="Fork me on GitHub"
+        >Fork me on GitHub</a
+      >
 
       <div class="countdown-container">
         <div class="countdown-el">
@@ -43,9 +54,6 @@
 
       <p>left until the new year</p>
     </main>
-    <footer>
-      <a href="#">source</a>
-    </footer>
 
     <script src="main.js" type="module"></script>
   </body>
